--- a/mercando-rest/src/main/webapp/WEB-INF/web.xml
+++ b/mercando-rest/src/main/webapp/WEB-INF/web.xml
@@ -33,4 +33,7 @@
         <dispatcher>REQUEST</dispatcher>
         <dispatcher>FORWARD</dispatcher>
     </filter-mapping>
+    <session-config>
+        <session-timeout>1440</session-timeout>
+    </session-config>
 </web-app>
