--- a/mercando-administration/src/main/webapp/WEB-INF/web.xml
+++ b/mercando-administration/src/main/webapp/WEB-INF/web.xml
@@ -33,17 +33,7 @@
         <dispatcher>REQUEST</dispatcher>
         <dispatcher>FORWARD</dispatcher>
     </filter-mapping>
-    <!--Sitemesh
-    <filter>
-        <filter-name>sitemesh</filter-name>
-        <filter-class>org.sitemesh.config.ConfigurableSiteMeshFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>sitemesh</filter-name>
-        <url-pattern>/*</url-pattern>
-        <dispatcher>REQUEST</dispatcher>
-        <dispatcher>ERROR</dispatcher>
-        <dispatcher>FORWARD</dispatcher>
-    </filter-mapping>
-     fin Sitemesh-->
+    <session-config>
+        <session-timeout>1440</session-timeout>
+    </session-config>
 </web-app>
