--- a/mercando-administration/src/main/resources/config/application.properties
+++ b/mercando-administration/src/main/resources/config/application.properties
@@ -2,6 +2,8 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-domain.url=${domain.url}
-static.domain.url=${static.domain.url}
-static.folder=${static.folder}
+local.static.domain=${local.static.domain}
+local.static.folder.linux=${local.static.folder.linux}
+local.static.folder.windows=${local.static.folder.windows}
+local.rootfolder=${local.rootfolder}
+timestamp=${timestamp}
