--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
             <properties>
                 <local.static.domain>http://localhost:8084</local.static.domain>
                 <local.static.folder.linux>/opt/apache-tomcat-9.0.0.M26-mercando/webapps/</local.static.folder.linux>
-                <local.static.folder.windows>C:\apps\apache-tomcat-9.0.12-mercando\webapps\</local.static.folder.windows>
+                <local.static.folder.windows>C:\apps\FILES\mercando\</local.static.folder.windows>
                 <local.rootfolder>recursos/</local.rootfolder>
                 
                 <jdbc.driverClassName>com.mysql.jdbc.Driver</jdbc.driverClassName>
