Ajustes de acceso a los archivos

--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
             </activation>
             <properties>
                 <local.static.domain>http://localhost:8084</local.static.domain>
-                <local.static.folder.linux>/opt/apache-tomcat-9.0.0.M26-mercando/webapps/</local.static.folder.linux>
+                <local.static.folder.linux>/opt/FILES/mercando/</local.static.folder.linux>
                 <local.static.folder.windows>C:\apps\FILES\mercando\</local.static.folder.windows>
                 <local.rootfolder>recursos/</local.rootfolder>
                 
